# modular-be

./: Cargo.toml  Dockerfile  build.rs  config.env
migrations/2022-10-16-153040_users/: up.sql
migrations/2022-10-24-192340_users/: up.sql
src/: main.rs
src/endpoints/authentication/: authentication.rs  mod.rs
src/endpoints/user/: mod.rs  user_ep.rs
src/managers/: auth.rs  db.rs  mod.rs  token.rs  um.rs
src/models/: auth.rs  user.rs
src/schema/: schema.rs
tests/api/: auth.robot  user.robot
