[package]
name = "rest01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-rt = "2.7.0"
serde = { version = "1.0.145" , features = ["derive"] }
serde_json = "0.9.0-rc2"
env_logger = "0.9.1"